Fix pagination alignment

--- a/_sass/pagination.scss
+++ b/_sass/pagination.scss
@@ -18,6 +18,7 @@
         flex-direction: column;
         &.prev {
             align-items: flex-end;
+            text-align: right;
         }
         &:hover {
             text-decoration: none;
